Fixed 404 page home button being too big
Fixed 404 page home button being too big

--- a/css/404-page.css
+++ b/css/404-page.css
@@ -23,7 +23,7 @@ main {
 }
 
 #home-button {
-    margin: 25px;
+    margin: 25px auto;
     text-decoration: none;
 }
 
